2006-09-20  Jonathan Chambers  <joncham@gmail.com>

	* Test.Rules.Exeptions.csproj: Make reference to nunit.framework
	not a specific version for portability.
	
2006-07-31  Sebastien Pouliot  <sebastien@ximian.com>

	* Test.Rules.Exeptions.mdp: New. Project file for MonoDevelop.
	* TestPatterns.cs: Renamed namespace and class to match other existing
	unit tests. Fixed some compiler warnings.

2006-06-19  Russell Morris  <russell@russellsprojects.com>

	* Initial import of exception-management rule assembly