@@ -1,4 +1,4 @@
-EXTRA_DIST = *.cs
+EXTRA_DIST = *.cs Test.Rules.Exceptions.mdp Tests.Rules.Exceptions.csproj
 DISTCLEANFILES = Makefile.in
 
 all:
