@@ -1,3 +1,12 @@
+2006-09-28  Sebastien Pouliot  <sebastien@ximian.com>
+
+	* Makefile.am: Adjust EXTRA_DIST to include project files in tarballs.
+
+2006-09-28  Christian Birkl  <christian.birkl@gmail.com>
+
+	* TestPatterns.cs: Migrated untyped IList messages collection	
+	to typed MessageCollection class.
+	
 2006-09-20  Jonathan Chambers  <joncham@gmail.com>
 
 	* Test.Rules.Exeptions.csproj: Make reference to nunit.framework
